--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "browser": "lib/browser.js",
   "binary": {
     "module_name": "wrtc",
-    "module_path": "./build/{module_name}/v{version}/{configuration}/{node_abi}-{platform}-{arch}/",
+    "module_path": "./_build/{module_name}/v{version}/{configuration}/{node_abi}-{platform}-{arch}/",
     "remote_path": "./{module_name}/v{version}/{configuration}/",
     "package_name": "{node_abi}-{platform}-{arch}.tar.gz",
     "host": "https://node-webrtc.s3.amazonaws.com"
